# esp32c6screen-eva

./: .gitignore  .mcp.json  .opencode.json  _build.ps1  _flash_only.ps1  build_esp.ps1  build_final.ps1  flash_esp.ps1  fullbuild.ps1  partitions.csv
.gemini/hooks/: crg-session-start.sh  crg-update.sh
.qoder/: settings.json
main/: CMakeLists.txt  agent.c  agent.h  agent_memory.c  agent_memory.h  agent_prompt.c  builtin_tools.def  channel.c  channel.h  config.h  display_task.c  display_task.h  http_channel.c  http_channel.h  idf_component.yml  json_util.c  llm.c  local_admin.c  main.c  messages.h  ota.c  ota.h  tools_display.c  tools_handlers.h  tools_web.c
main/LCD_Driver/: ST7789.c
main/LVGL_Driver/: LVGL_Driver.c
scripts/: esp_stress_test.py  provision.sh
