idf_component_register(
    SRCS
        "main.c"
        "agent.c"
        "agent_commands.c"
        "agent_prompt.c"
        "channel.c"
        "local_admin.c"
        "llm.c"
        "llm_auth.c"
        "http_gate.c"
        "http_channel.c"
        "tools.c"
        "tools_common.c"
        "gpio_policy.c"
        "tools_gpio.c"
        "tools_i2c.c"
        "tools_dht.c"
        "tools_display.c"
        "tools_memory.c"
        "tools_persona.c"
        "tools_cron.c"
        "tools_system.c"
        "tools_web.c"
        "memory.c"
        "agent_memory.c"
        "json_util.c"
        "cron.c"
        "memory_keys.c"
        "text_buffer.c"
        "security.c"
        "cron_utils.c"
        "ratelimit.c"
        "ota.c"
        "boot_guard.c"
        "user_tools.c"
        "wifi_credentials.c"
        "LCD_Driver/Vernon_ST7789T/Vernon_ST7789T.c"
        "LCD_Driver/ST7789.c"
        "RGB/RGB.c"
        "LVGL_Driver/LVGL_Driver.c"
        "display_task.c"
    INCLUDE_DIRS "."
        "LCD_Driver"
        "LCD_Driver/Vernon_ST7789T"
        "RGB"
        "LVGL_Driver"
    REQUIRES
        nvs_flash
        esp_wifi
        esp_http_client
        esp_http_server
        esp_netif
        esp-tls
        mbedtls
        esp_timer
        json
        driver
        lwip
        esp_driver_usb_serial_jtag
        app_update
        esp_lcd
        lvgl__lvgl
)

set(ZCLAW_RELEASE_VERSION "dev")
if(DEFINED PROJECT_VER AND NOT PROJECT_VER STREQUAL "")
    set(ZCLAW_RELEASE_VERSION "${PROJECT_VER}")
endif()
target_compile_definitions(${COMPONENT_LIB} PRIVATE ZCLAW_VERSION="${ZCLAW_RELEASE_VERSION}")
